# seo-professor

./: .gitignore  Claude.md  Dockerfile.trigger  conftest.py  package-lock.json  package.json  project_specs.md  pyproject.toml  requirements.txt  trigger.config.ts  vercel.json
.github/workflows/: trigger-deploy.yml
api/: audit.js
api/status/: [runId].js
migrations/: 001_initial_schema.sql
public/: index.html
references/: response-guidelines.md
references/archive/: 2026-03-30-site-auditor-design.md  2026-03-30-site-auditor.md  README.md  project_specs.md
src/: aggregator.py  ai_analyzer.py  audit.py  db.py  report_generator.py  web.py
src/templates/: app.html  report.css  report.html
tests/: conftest.py  factories.py  test_aeo_auditor.py  test_aggregator.py  test_ai_analyzer.py  test_audit.py  test_audit_cli.py  test_authority_auditor.py  test_crawler.py  test_cwv_auditor.py  test_db.py  test_image_auditor.py  test_indexation_auditor.py  test_js_render_auditor.py  test_link_auditor.py  test_onpage_auditor.py  test_report_generator.py  test_security_auditor.py  test_smoke.py  test_structured_data_auditor.py  test_tool_contract.py
tests/fixtures/: aeo_optimized_page.html  minimal_page.html  page_with_eeat.html  (+8 more)
tools/: aeo_auditor.py  authority_auditor.py  base.py  crawler.py  cwv_auditor.py  ga_auditor.py  gsc_auditor.py  image_auditor.py  indexation_auditor.py  js_render_auditor.py  link_auditor.py  onpage_auditor.py  security_auditor.py  structured_data_auditor.py
trigger/: audit_task.py  audit_task.ts  run_audit.py
workflows/: site-audit.md
(+1 files in other folders)
